--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
   },
   "dependencies": {
     "axios": "^0.13.1",
+    "boostrap": "^2.0.0",
     "cross-env": "^3.1.4",
     "express": "^4.14.0",
+    "jquery": "^3.2.1",
     "lru-cache": "^4.0.1",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.0",
+    "sinon": "^2.4.1",
     "vue": "^2.3.4",
     "vue-router": "^2.7.0",
     "vue-server-renderer": "^2.3.4",
@@ -57,7 +60,7 @@
     "eslint-plugin-html": "^1.5.2",
     "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-standard": "^2.0.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta.3",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^2.28.0",
     "karma": "^1.1.2",
